<?xml version="1.0"?>
<package format="2">
  <name>zbar_ros</name>
  <version>0.1.0</version>
  <description>Lightweight ROS wrapper for Zbar barcode/qrcode reader library (http://zbar.sourceforge
    .net/)</description>

  <author email="paul@bovbel.com">Paul Bovbel</author>
  <maintainer email="paul@bovbel.com">Paul Bovbel</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>libzbar-dev</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>srslib_framework</build_depend>

  <!-- <build_depend>nodelet</build_depend> -->
  <!-- <build_depend>roslint</build_depend> -->
  <build_export_depend>libzbar-dev</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>srslib_framework</build_export_depend>

  <exec_depend>libzbar-dev</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>cv_bridge</exec_depend> 
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>srslib_framework</exec_depend>  

  <!-- <run_depend>libzbar-dev</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>cv_bridge</run_depend> -->
  <!-- <run_depend>nodelet</run_depend> -->

  <export>
    <!-- <nodelet plugin="${prefix}/nodelets.xml"/> -->
  </export>
</package>
