<?xml version="1.0"?>
<package format="2">
  <name>zbar_ros</name>
  <version>1.0.0</version>
  <description>Lightweight ROS wrapper for Zbar barcode/qrcode reader library (http://zbar.sourceforge
    .net/)</description>

  <author email="paul@bovbel.com">Paul Bovbel</author>
  <maintainer email="paul@bovbel.com">Paul Bovbel</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>zbar</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>roslint</build_depend>

  <exec_depend>zbar</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>nodelet</exec_depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml"/>
  </export>
</package>
